--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"license": "MIT",
 	"author": {
+		"name": "Josh Goldberg",
 		"email": "npm@joshuakgoldberg.com"
 	},
 	"type": "module",
@@ -35,9 +36,13 @@
 	"lint-staged": {
 		"*": "prettier --ignore-unknown --write"
 	},
+	"dependencies": {
+		"octokit": "^3.1.2"
+	},
 	"devDependencies": {
 		"@release-it/conventional-changelog": "^8.0.1",
 		"@types/eslint": "^8.56.0",
+		"@types/node": "^20.10.5",
 		"@typescript-eslint/eslint-plugin": "^6.15.0",
 		"@typescript-eslint/parser": "^6.15.0",
 		"@vitest/coverage-v8": "^1.1.0",
