chore: use octokit-from-auth package (#437)
## PR Checklist

- [x] Addresses an existing open issue: fixes #436
- [x] That issue was marked as [`status: accepting
prs`](https://github.com/JoshuaKGoldberg/github-username-to-emails/issues?q=is%3Aopen+is%3Aissue+label%3A%22status%3A+accepting+prs%22)
- [x] Steps in
[CONTRIBUTING.md](https://github.com/JoshuaKGoldberg/github-username-to-emails/blob/main/.github/CONTRIBUTING.md)
were taken

## Overview

Replaces the equivalent logic internally.

💖

--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
 		"*": "prettier --ignore-unknown --write"
 	},
 	"dependencies": {
-		"get-github-auth-token": "^0.1.0",
-		"octokit": "^4.0.0"
+		"octokit": "^4.0.2",
+		"octokit-from-auth": "^0.2.0"
 	},
 	"devDependencies": {
 		"@release-it/conventional-changelog": "^9.0.0",
