--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Fetches any public emails associated with a GitHub username. 📧",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/JoshuaKGoldberg/github-username-to-emails"
+		"url": "git+https://github.com/JoshuaKGoldberg/github-username-to-emails.git"
 	},
 	"license": "MIT",
 	"author": {
@@ -12,26 +12,24 @@
 		"email": "npm@joshuakgoldberg.com"
 	},
 	"type": "module",
-	"main": "./lib/index.js",
-	"bin": "./bin/index.js",
+	"main": "lib/index.js",
+	"bin": "bin/index.js",
 	"files": [
-		"bin/",
-		"lib/",
-		"package.json",
 		"LICENSE.md",
-		"README.md"
+		"README.md",
+		"bin/index.js",
+		"lib/",
+		"package.json"
 	],
 	"scripts": {
 		"build": "tsup",
-		"format": "prettier \"**/*\" --ignore-unknown",
-		"lint": "eslint . .*js --max-warnings 0",
+		"format": "prettier .",
+		"lint": "eslint . --max-warnings 0",
 		"lint:knip": "knip",
 		"lint:md": "markdownlint \"**/*.md\" \".github/**/*.md\" --rules sentences-per-line",
-		"lint:package-json": "npmPkgJsonLint .",
 		"lint:packages": "pnpm dedupe --check",
 		"lint:spelling": "cspell \"**\" \".github/**/*\"",
 		"prepare": "husky",
-		"should-semantic-release": "should-semantic-release --verbose",
 		"test": "vitest",
 		"tsc": "tsc"
 	},
@@ -43,44 +41,40 @@
 		"octokit-from-auth": "^0.3.0"
 	},
 	"devDependencies": {
-		"@release-it/conventional-changelog": "^10.0.0",
-		"@types/eslint": "^8.56.0",
-		"@types/node": "^22.0.0",
-		"@typescript-eslint/eslint-plugin": "^7.0.0",
-		"@typescript-eslint/parser": "^8.0.0",
-		"@vitest/coverage-v8": "^1.1.0",
-		"console-fail-test": "^0.5.0",
-		"cspell": "^8.2.1",
-		"eslint": "^8.56.0",
-		"eslint-plugin-deprecation": "^3.0.0",
-		"eslint-plugin-eslint-comments": "^3.2.0",
-		"eslint-plugin-jsdoc": "^50.0.0",
-		"eslint-plugin-jsonc": "^2.11.2",
-		"eslint-plugin-markdown": "^3.0.1",
-		"eslint-plugin-n": "^17.0.0",
-		"eslint-plugin-no-only-tests": "^3.1.0",
-		"eslint-plugin-perfectionist": "^2.5.0",
-		"eslint-plugin-regexp": "^2.1.2",
-		"eslint-plugin-vitest": "^0.4.0",
-		"eslint-plugin-yml": "^1.11.0",
-		"husky": "^9.0.0",
-		"jsonc-eslint-parser": "^2.4.0",
-		"knip": "^5.0.0",
-		"lint-staged": "^15.2.0",
-		"markdownlint": "^0.37.0",
-		"markdownlint-cli": "^0.44.0",
-		"npm-package-json-lint": "^8.0.0",
-		"npm-package-json-lint-config-default": "^7.0.0",
-		"prettier": "^3.1.1",
-		"prettier-plugin-curly": "^0.3.0",
-		"prettier-plugin-packagejson": "^2.4.7",
-		"release-it": "^18.0.0",
-		"sentences-per-line": "^0.3.0",
-		"should-semantic-release": "^0.3.0",
-		"tsup": "^8.0.1",
-		"typescript": "^5.3.3",
-		"vitest": "^1.1.0",
-		"yaml-eslint-parser": "^1.2.2"
+		"@eslint-community/eslint-plugin-eslint-comments": "4.4.1",
+		"@eslint/js": "9.22.0",
+		"@release-it/conventional-changelog": "10.0.0",
+		"@types/eslint-plugin-markdown": "2.0.2",
+		"@types/node": "22.13.10",
+		"@vitest/coverage-v8": "3.0.9",
+		"@vitest/eslint-plugin": "1.1.38",
+		"console-fail-test": "0.5.0",
+		"create-typescript-app": "2.22.0",
+		"cspell": "8.17.5",
+		"eslint": "9.22.0",
+		"eslint-plugin-jsdoc": "50.6.8",
+		"eslint-plugin-jsonc": "2.20.0",
+		"eslint-plugin-markdown": "5.1.0",
+		"eslint-plugin-n": "17.16.2",
+		"eslint-plugin-package-json": "0.29.0",
+		"eslint-plugin-perfectionist": "4.10.1",
+		"eslint-plugin-regexp": "2.7.0",
+		"eslint-plugin-yml": "1.17.0",
+		"husky": "9.1.7",
+		"knip": "5.46.0",
+		"lint-staged": "15.5.0",
+		"markdownlint": "0.37.4",
+		"markdownlint-cli": "0.44.0",
+		"prettier": "3.5.3",
+		"prettier-plugin-curly": "0.3.1",
+		"prettier-plugin-packagejson": "2.5.10",
+		"prettier-plugin-sh": "0.15.0",
+		"release-it": "18.1.2",
+		"sentences-per-line": "0.3.0",
+		"tsup": "8.4.0",
+		"typescript": "5.8.2",
+		"typescript-eslint": "8.26.1",
+		"vitest": "3.0.9"
 	},
 	"packageManager": "pnpm@10.6.4",
 	"engines": {
